--- a/_posts/2016-1-1-custom.markdown
+++ b/_posts/2016-1-1-custom.markdown
@@ -1,6 +1,6 @@
 ---
 layout: default
-img: girlinflowers.jpg
+img: customized.jpg
 category: Services
 title: Customized Individual Training
 description: |
