--- a/_posts/2016-1-2-custom.markdown
+++ b/_posts/2016-1-2-custom.markdown
@@ -5,6 +5,6 @@ category: Services
 title: Customized Individual Training
 description: |
 ---
-This course is designed for those who prefer a one on one approach and have some basic knowlege/skill. It will last 4-5 hrs and will combine classroom and range time. Students should bring a minimum of 200 rounds and a firearm to qualify with.     
+This course is designed for those who prefer a one on one approach and have some current basic knowlege/skills. It will last 4-5 hrs and will combine classroom and range time. Students should bring a minimum of 200 rounds and a firearm to qualify with.     
        
-Pistol: $65 | Shotgun/AR-15: $75
+Pistol: $65 | Shotgun/Rifle: $75
