--- a/_posts/2016-1-4-basics1.markdown
+++ b/_posts/2016-1-4-basics1.markdown
@@ -9,7 +9,6 @@ This course introduces students to the knowledge, skills, and attitude necessary
 Students will be expected to bring 200 rounds and a semi-automatic pistol to qualify with.    
 (If you don't have your own pistol, one may be rented at an additional charge).  
 
-
      
 Semi-automatic ONLY: $120/person [Requires $60 deposit for training materials]
 
@@ -18,8 +17,6 @@ Semi-automatic ONLY: $120/person [Requires $60 deposit for training materials]
 Upcoming Classes -- 
 
 
-
-[2 day split-course] April 28, 2017--6:30pm, April 29, 2017--9am
-
+[2 day split-course] April 28-29, 2017--6:30pm, 9am
 
 [1 day course] May 27, 2017--9am
