--- a/_posts/2016-1-2-custom.markdown
+++ b/_posts/2016-1-2-custom.markdown
@@ -10,4 +10,4 @@ This course is designed for those who prefer a one on one approach and have some
 Pistol: $65 | Shotgun/Rifle: $75
 
 
-Call or Email for Class schedule
+Call or Email for Class Schedule
