--- a/_posts/2016-1-2-ppith.markdown
+++ b/_posts/2016-1-2-ppith.markdown
@@ -14,4 +14,4 @@ Individual: $130/person [Requires $60 deposit for training materials]
 Upcoming Class - May 20, 2017--9am
 
 
-Call or Email for Class Schedule
+Call or Email for Class Registration
