--- a/_posts/2016-1-4-basics1.markdown
+++ b/_posts/2016-1-4-basics1.markdown
@@ -13,10 +13,10 @@ Students will be expected to bring 200 rounds and a semi-automatic pistol to qua
 Semi-automatic ONLY: $120/person [Requires $60 deposit for training materials]
 
 
-
 Upcoming Classes -- 
-
 
 [2 day split-course] April 28-29, 2017--6:30pm, 9am
 
 [1 day course] May 27, 2017--9am
+
+Call or Email for Class Registration
